<resources>
    <string name="app_name">MonitoringVisits</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="email">Email Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_is_the_quality_of_water">How is the quality of water?</string>
    <string name="poor">Poor</string>
    <string name="normal">Normal</string>
    <string name="good">Good</string>
    <string name="what_are_the_reasons_for_lack_of_water_supply">What are the reasons for lack of water supply?</string>
    <string name="corrupt_suppliers">Corrupt suppliers</string>
    <string name="water_is_supplied_but_it_is_undrinkable">Water is supplied but it is undrinkable</string>
    <string name="faulty_water_tanks_that_leak_water">Faulty water tanks that leak water</string>
    <string name="internal_panchayat_issues">Internal panchayat issues</string>
    <string name="false_report_water_quality_is_perfect">False report: Water quality is perfect</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Saved</string>
    <string name="name">Name</string>
    <string name="visit">Visit</string>
    <string name="logout">Log Out</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="enter_text_here">Enter text here...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_pager2">ViewPager2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="new_user_register">New User? Register.</string>
    <string name="login_title">Login</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? Login.</string>
    <string name="my_tasks">My Tasks</string>


</resources>
