<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="8dp"
    app:cardElevation="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/what_are_the_reasons_for_lack_of_water_supply"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/option_1_checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_text_view" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/corrupt_suppliers"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_1_checkbox"
            app:layout_constraintStart_toEndOf="@id/option_1_checkbox"
            app:layout_constraintTop_toTopOf="@id/option_1_checkbox" />

        <CheckBox
            android:id="@+id/option_2_checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_1_checkbox" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/water_is_supplied_but_it_is_undrinkable"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_2_checkbox"
            app:layout_constraintStart_toEndOf="@id/option_2_checkbox"
            app:layout_constraintTop_toTopOf="@id/option_2_checkbox" />

        <CheckBox
            android:id="@+id/option_3_checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_2_checkbox" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/faulty_water_tanks_that_leak_water"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_3_checkbox"
            app:layout_constraintStart_toEndOf="@id/option_3_checkbox"
            app:layout_constraintTop_toTopOf="@id/option_3_checkbox" />

        <CheckBox
            android:id="@+id/option_4_checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_3_checkbox" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/internal_panchayat_issues"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_4_checkbox"
            app:layout_constraintStart_toEndOf="@id/option_4_checkbox"
            app:layout_constraintTop_toTopOf="@id/option_4_checkbox" />

        <CheckBox
            android:id="@+id/option_5_checkbox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_4_checkbox" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/false_report_water_quality_is_perfect"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_5_checkbox"
            app:layout_constraintStart_toEndOf="@id/option_5_checkbox"
            app:layout_constraintTop_toTopOf="@id/option_5_checkbox" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>