<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="8dp"
    app:cardElevation="20dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_is_the_quality_of_water"
            android:textSize="22sp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/option_1_radio_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question_text_view" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/poor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_1_radio_button"
            app:layout_constraintStart_toEndOf="@id/option_1_radio_button"
            app:layout_constraintTop_toTopOf="@id/option_1_radio_button" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/option_2_radio_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_1_radio_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/normal"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_2_radio_button"
            app:layout_constraintStart_toEndOf="@id/option_2_radio_button"
            app:layout_constraintTop_toTopOf="@id/option_2_radio_button" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/option_3_radio_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/option_2_radio_button" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/good"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/option_3_radio_button"
            app:layout_constraintStart_toEndOf="@id/option_3_radio_button"
            app:layout_constraintTop_toTopOf="@id/option_3_radio_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>